# nishiki-notification

./: README.md
cdk/: biome.json  cdk.json  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
cdk/test/: cdk.test.ts
lambdas/notification-function/: Cargo.toml
lambdas/notification-function/src/: main.rs
