[package]
name = "notification-function"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.15.0", default-features = false, features = ["eventbridge"] }

lambda_runtime = "0.10.0"
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
reqwest = "0.11.26"
lazy_static = "1.4.0"
openssl = { version = "0.10.35", features = ["vendored"] }